--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "macro-css": "^1.0.5",
-    "node-sass": "^7.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
